# refindery

./: .coverage  .dockerignore  .gitignore  .semgrep.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  Refindery Spec.md  SECOND_BRAIN_ROADMAP.md  docker-compose.yml  docs_api_reference.py  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  lint-test.yml  publish.yml  real-extractors.yml  security.yml  youtube-captions.yml
design/: mcp-integration-guide.md  refindery-roadmap-brain-crew.md  resurface-digest.md
docs/: architecture.md  index.md  operations.md
docs/architecture/: data-model.md  index.md
docs/configuration/: auth.md  deployment-profiles.md  index.md  observability.md  reference.md  tuning.md
docs/contributing/: index.md  roadmap.md  testing.md
docs/getting-started/: index.md  installation.md  quickstart.md  validate.md
docs/guides/: admin-ui.md  clustering.md  deletion.md  entities.md  eval.md  index.md  ingest.md  mcp.md  models.md  search.md  watches.md
docs/operations/: index.md
docs/reference/: cli.md  http-api.md  index.md  mcp-tools.md  upstream-ingest-api.md
docs/reference/python-api/: config.md  domain.md  index.md  ports.md  services.md
monitoring/: prometheus.yml
proposals/cog-second-brain/: 00-overview.md  01-adopt-cog-ideas.md  02-integration.md  03-roadmap.md  integration-guide.md
scripts/: fetch-cockpit-ui.sh  setup-macos-docker.sh  setup-macos.sh
src/refindery/: __init__.py  __main__.py  cli.py  config.py
src/refindery/adapters/: clock.py
src/refindery/adapters/chunking/: __init__.py  chonkie_chunker.py
src/refindery/adapters/cluster/: __init__.py  engine.py  worker.py
src/refindery/adapters/embedding/: __init__.py  catsu_embedder.py  surface_forms.py
src/refindery/adapters/extraction/: __init__.py  http_fetcher.py  pdf_pypdf.py  pulpie_html.py  routing_fetcher.py  youtube_captions.py  youtube_envelope.py  youtube_fetcher.py  youtube_transcript_extractor.py
src/refindery/adapters/extractors/: __init__.py  chain.py  gazetteer.py  gliner_spacy.py  llm.py  spacy_ner.py
src/refindery/adapters/feeds/: __init__.py  podcast_feedparser.py  rss_feedparser.py
src/refindery/adapters/graph/: kuzu_store.py
src/refindery/adapters/llm/: __init__.py  openai_compat.py
src/refindery/adapters/metadata/: __init__.py  migrator.py  sqlite_store.py
src/refindery/adapters/observability/: __init__.py  duckdb_sink.py  logging.py  metrics.py  metrics_history.py  otel.py  query_log.py  query_log_reader.py
src/refindery/adapters/podcast/: __init__.py  envelope.py  extractor.py  producer.py
src/refindery/adapters/queue/: __init__.py  huey_queue.py
src/refindery/adapters/reranking/: __init__.py  api.py
src/refindery/adapters/resilience/: __init__.py  circuit_breaker.py  retry.py  wrappers.py
src/refindery/adapters/transcription/: __init__.py  audio_fetcher.py  envelope.py  extractor.py  faster_whisper.py  mlx_whisper.py  (+1 more)
src/refindery/api/: app.py  auth.py  deps.py  mcp.py  schemas.py
src/refindery/application/: __init__.py  container.py  job_events.py  timing.py
src/refindery/domain/: __init__.py  audio.py  canonical_url.py  clustering.py  content_hash.py  ctfidf.py  entities.py  errors.py  ids.py  job_keys.py  models.py  ranking_metrics.py  retrieval.py  rollup.py  youtube.py
tests/: test_docs_api_reference.py
tests/api/: test_admin_api.py  test_admin_ui.py  test_auth_scopes.py  test_entities_api.py  test_events_api.py  test_forget_api.py  test_jobs_api.py  test_mcp_api.py  test_models_compare_api.py  test_pages_api.py  test_podcast_api.py  test_podcast_chapters_api.py  test_search_api.py  test_watches_api.py  test_youtube_api.py
tests/conformance/: __init__.py  conftest.py  test_vector_store.py
tests/fakes/: __init__.py  chunking.py  clock.py  container.py  embedder.py  entity_extractor.py  extraction.py  feeds.py  reranker.py  streaming_transport.py  surface_embedder.py  watch.py  youtube.py
tests/integration/: test_entities_clusters.py  test_eval_harness.py  test_extractors_real.py  test_graph.py  test_huey_queue.py  test_lancedb_fts.py  test_pdf_ingest.py  test_sqlite_store.py  test_youtube_captions_real.py
tests/unit/: test_api_reranker.py  test_audio_fetcher.py  test_audio_transcript_extractor.py  test_audio_url.py  test_auth_config.py  test_canonical_url.py  test_catsu_embedder.py  test_chapter_chunking.py  test_chunker.py  test_circuit_breaker.py  test_cli.py  test_cluster_config.py  test_container.py  test_domain_basics.py  test_duckdb_sink_drops.py  test_entities_domain.py  test_eval_service.py  test_extractor_chain.py  test_fetch_router.py  test_http_fetcher.py  test_indexing_sections.py  test_job_events.py  test_job_keys.py  test_llm_extractor.py  test_macos_docker_setup_script.py  test_macos_setup_script.py  test_migrations_dialect.py  test_migrator.py  test_openai_compat.py  test_pdf_extractor.py  test_podcast_feed_parser.py  test_podcast_producer.py  test_podcast_transcript_extractor.py  test_prometheus_compose.py  test_query_log_reader_quantiles.py  test_ranking_metrics.py  test_resilient_wrappers.py  test_retrieval.py  test_retry.py  test_rollup.py  (+9 more)
(+76 files in other folders)
